pre ~ 27.01.22 | small bug fix - monospace font incorrect output

--- a/main.css
+++ b/main.css
@@ -134,7 +134,7 @@ nav ul.right>li>i {
 [role="doc-subtitle"] {
   margin-bottom: 15px;
   color: #729BAC;
-  font-family: 'Cascadia Code';
+  font-family: 'Cascadia Code', monospace;
   font-size: 1em;
   width: fit-content;
 }
