--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,64 +1,46 @@
-/* 
-  ##Device = Desktops
-  ##Screen = 1281px to higher resolution desktops
-*/
-
-@media (min-width: 1281px) {
-  html,
-  body {
-    font-size: 2em;
-  }  
+/* large screens */  
+@media only screen and (min-width : 1824px) {  
+    
 }
 
-/* 
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
+/* desktops and laptops */  
+@media only screen and (min-width : 1224px) {  
+    
+}
 
-@media (min-width: 1025px) and (max-width: 1280px) {
-  
-  /* CSS */
+/* iPads (portrait and landscape) */  
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {  
   
 }
 
-/* 
-  ##Device = Tablets, Ipads (portrait)
-  ##Screen = B/w 768px to 1024px
-*/
-
-@media (min-width: 768px) and (max-width: 1024px) {
-  
-  /* CSS */
+/* iPads (portrait) */  
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {  
   
 }
 
-/* 
-  ##Device = Tablets, Ipads (landscape)
-  ##Screen = B/w 768px to 1024px
-*/
-
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+/* iPads (landscape) */  
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {  
   
 }
 
-/* 
-  Device = Low Resolution Tablets, Mobiles (Landscape)
-  ##Screen = B/w 481px to 767px
-*/
+/* smartphones (portrait and landscape) */  
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media only screen   
+and (min-device-width : 320px) and (max-device-width : 480px) {  
   
-  /* CSS */
+}
+  
+/* smartphones (portrait) */  
+@media only screen and (max-width : 320px) {  
   
 }
 
-/* 
-  ##Device = Most of the Smartphones Mobiles (Portrait)
-  ##Screen = B/w 320px to 479px
-*/
-
-@media (min-width: 320px) and (max-width: 480px) {
+/* smartphones (landscape) */  
+@media only screen and (min-width : 321px) {  
   
-  /* CSS */
+}
   
+/* iPhone 4 */  
+@media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min-device-pixel-ratio:1.5) {  
+    
 }
