--- a/css/responsive.css
+++ b/css/responsive.css
@@ -178,8 +178,9 @@ and (min-device-width : 320px) and (max-device-width : 480px) {
   }
 
   .about .me .myPic {
-    margin: 30px 37.5px 10px 37.5px;
+    margin: 30px 0 10px 0;
     padding: 0;
+    text-align: center;
   }
 
   .about .me .myPic img {
