pre ~ 30.01.22 @ 22:34PM | [iPad & Tablet * Bug Fix] - additional padding in experience section (bottom padding)

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -149,7 +149,7 @@
   /* experience */
 
   .experience {
-    padding: 20% 7.5% 15% 7.5%;
+    padding: 20% 7.5%;
   }
 
   .experience .timeline {
