pre ~ 01.02.22 @ 06:49AM | [css changes] - corrected newly found padding issues on text addition

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -141,7 +141,7 @@ and (min-device-width : 320px) and (max-device-width : 480px) {
 
   .head {
     margin-top: 80px;
-    padding: 5% 7.5%;
+    padding: 5% 7.5% 10% 7.5%;
   }
 
   .head [role="doc-subtitle"] {
